# copilotkit-strands-agentcore

./: .dockerignore  .gitignore  Dockerfile  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
agent/: main.py  package.json  pyproject.toml
iac/: cdk.json  package.json
iac/lib/: main-stack.ts
server/: package.json
server/src/: index.ts
src/app/api/copilotkit/: route.ts
web/: design.md  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/api/copilotkit/: route.ts
web/src/components/: default-tool-ui.tsx  weather.tsx
