[project]
name = "aws-strands-server"
version = "0.1.0"
description = "Strands integration server for AG-UI using OpenAI models"
authors = [{ name = "AG-UI Contributors" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "uvicorn>=0.34.3",
  "ag_ui_strands==0.1.0b12",
  "strands-agents>=1.18.0",
]
